--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     Hello World!
+    <b> Presto online sui vostri schermi</b>
+    <p>Fatto con &#128153;</p>
   </body>
 </html>
