--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>LOGAZ</title>
   </head>
   <body>
-    Hello World!
-    <b> Presto online sui vostri schermi</b>
+    <p>Hello World!</p>
+    <p><b> Presto online sui vostri schermi</b></p>
     <p>Fatto con &#128153;</p>
   </body>
 </html>
