--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <p>Hello World!</p>
     <p><b> Presto online sui vostri schermi</b></p>
-    <p>per ora mi trovi <a href="illogaz.tumblr.com" target="_blank">QUI</a></p>
+    <p>per ora mi trovi <a href="https://illogaz.tumblr.com" target="_blank">QUI</a></p>
     <p></p>
     <p>Fatto con &#128153;</p>
   </body>
