aggiunta foglio stile

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>LOGAZ</title>
+    <link href='style.css' rel='stylesheet'>
   </head>
   <body>
-    <p>Hello World!</p>
     <p><b> Presto online sui vostri schermi</b></p>
     <p>per ora mi trovi <a href="https://illogaz.tumblr.com" target="_blank">QUI</a></p>
     <p></p>
