--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link href='style.css' rel='stylesheet'>
   </head>
   <body>
-    <p><b> Presto online sui vostri schermi</b></p>
+    <h1><b> Presto online sui vostri schermi</b></h1>
     <p>per ora mi trovi <a href="https://illogaz.tumblr.com" target="_blank">QUI</a></p>
     <p></p>
-    <p>Fatto con &#128153;</p>
+    <p>Fatto con &#128153; a Milano </p>
   </body>
 </html>
