--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>LOGAZ</title>
-    <link href='style.css' rel='stylesheet'>
+    <link href='./resources/css/style.css' rel='stylesheet'>
   </head>
   <body>
     <h1><b> Presto online sui vostri schermi</b></h1>
