--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
   </head>
   <body>
     <h1><b> Presto online sui vostri schermi</b></h1>
-    <p>per ora mi trovi <a href="#contacts">QUI</a></p>
-    <p></p>
-    <p>Fatto con &#128153; a Milano </p>
+    <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
+    <br>
+    <br>
     <div class="item">
       <h2 id="contacts"> <a name="contacts">Contattami: </a></h2>
       <ul>
         <li>Twitter: <a href="http://www.twitter.com/logaz" target="_blank">@logaz</a></li>
-        <li>Tumblr: <a href="http://https://illogaz.tumblr.com" target="_blank">illlogaz.tumblr.com</a></li>
+        <li>Tumblr: <a href="https://illogaz.tumblr.com/ target="_blank">illogaz.tumblr.com</a></li>
       </ul>
-
     </div>
-  </body>
+    <div class="footer">
+      <br>
+      <p>Fatto con &#128153; a Milano </p>
+    </div>
+    </body>
 </html>
