--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
   <head>
     <title>LOGAZ</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&display=swap" rel="stylesheet"> 
     <link href='./resources/css/style.css' rel='stylesheet'>
   </head>
   <body>
-    <h1><b> Presto online sui vostri schermi</b></h1>
-    <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
+    <div class="intro">    
+      <h1><b>Presto online sui vostri schermi</b></h1>
+      <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
     <br>
     <br>
-    <div class="item">
-      <h2 id="contacts"> <a name="contacts">Contattami: </a></h2>
-      <ul>
-        <li>Twitter: <a href="http://www.twitter.com/logaz" target="_blank">@logaz</a></li>
-        <li>Tumblr: <a href="https://illogaz.tumblr.com/ target="_blank">illogaz.tumblr.com</a></li>
-      </ul>
+    </div>
+
+    <div class="contact">
+      <h3> <a name="contacts">Contattami: </a></h3>
+        <ul>
+          <li>Twitter: <a href="http://www.twitter.com/logaz" target="_blank">@logaz</a></li>
+          <li>Tumblr: <a href="https://illogaz.tumblr.com/ target="_blank>illogaz.tumblr.com</a></li>
+        </ul>
     </div>
     <div class="footer">
       <br>
       <p>Fatto con &#128153; a Milano </p>
     </div>
-    </body>
+  </body>
 </html>
