aggiunta pagine blog e utilizzo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <link href='./resources/css/style.css' rel='stylesheet'>
   </head>
   <body>
+
     <div class="intro">    
       <h1><b>Presto online sui vostri schermi</b></h1>
       <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
     <br>
     <br>
+    </div>
+
+    <div class="menu">
+      <table>
+        <tr>
+          <th><a href='./blog/blog_list.html'>Blog</a></th>
+          <th><a href='./cose_che_uso.html'>Cose che uso</a></th>
+          <th><a href='#contacts'>Contatti</a></th>
+        </tr>
+      </table>
     </div>
 
     <div class="contact">
