modifiche estetiche, soprattutto alla home

--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
   </head>
   <body>
 
+    <div class="menu">
+      <hr class="solid">
+      <table>
+        <tr>
+          <th><a href="./index.html">&#x1F3E0; Home</a></th>
+          <th><a href='./blog/blog_list.html'> &#128466;&#65039; Blog</a></th>
+          <!--<th><a href='./cose_che_uso.html'>Cose che uso</a></th> -->
+          <th><a href='#contacts'>&#128223; Contatti</a></th>
+        </tr>
+      </table>
+      <hr class="solid">
+      <br>
+    </div>
+
     <div class="intro">    
-      <h1><b>Presto online sui vostri schermi</b></h1>
+      <h1><b>Ciao, sono Emanuele - in arte Logaz</b></h1>
       <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
     <br>
     <br>
-    </div>
-
-    <div class="menu">
-      <table>
-        <tr>
-          <th><a href='./blog/blog_list.html'>Blog</a></th>
-          <th><a href='./cose_che_uso.html'>Cose che uso</a></th>
-          <th><a href='#contacts'>Contatti</a></th>
-        </tr>
-      </table>
     </div>
 
     <div class="contact">
@@ -33,6 +37,7 @@
         </ul>
     </div>
     <div class="footer">
+
       <br>
       <p>Fatto con &#128153; a Milano </p>
     </div>
