--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
       <hr class="solid">
       <table>
         <tr>
-          <th><a href="./index.html">&#x1F3E0; Home</a></th>
-          <th><a href='./blog/blog_list.html'> &#128466;&#65039; Blog</a></th>
+          <th>&#x1F3E0; <a href="./index.html">Home</a></th>
+          <th>&#128466;&#65039; <a href='./blog/blog_list.html'> Blog</a></th>
           <!--<th><a href='./cose_che_uso.html'>Cose che uso</a></th> -->
-          <th><a href='#contacts'>&#128223; Contatti</a></th>
-        </tr>
+          <th>&#128223; <a href='#contacts'> Contatti</a></th>
       </table>
       <hr class="solid">
-      <br>
     </div>
 
     <div class="intro">    
@@ -36,8 +34,8 @@
           <li>Tumblr: <a href="https://illogaz.tumblr.com/ target="_blank>illogaz.tumblr.com</a></li>
         </ul>
     </div>
+    
     <div class="footer">
-
       <br>
       <p>Fatto con &#128153; a Milano </p>
     </div>
