--- a/index.html
+++ b/index.html
@@ -14,27 +14,32 @@
         <tr>
           <th>&#x1F3E0; <a href="./index.html">Home</a></th>
           <th>&#128466;&#65039; <a href='./blog/blog_list.html'> Blog</a></th>
-          <!--<th><a href='./cose_che_uso.html'>Cose che uso</a></th> -->
-          <th>&#128223; <a href='#contacts'> Contatti</a></th>
+          <!-- <th>&#128223; <a href='#contacts'> Contatti</a></th> -->
+          <th>&#10067; <a href='./about.html'> About</a></th>
       </table>
       <hr class="solid">
     </div>
 
     <div class="intro">    
       <h1><b>Ciao, sono Emanuele - in arte Logaz</b></h1>
-      <p>per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
+      <p>Sono un chimico che si occupa di qualità.</p>
+      <p>Mi diletto a scrivere codice, scrivere storie e fare fotografie; presto raccoglierò tutto su questo sito.</p>
+      <p>Per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
+    <br>
     <br>
     <br>
     </div>
 
     <div class="contact">
-      <h3> <a name="contacts">Contattami: </a></h3>
-        <ul>
-          <li>Twitter: <a href="http://www.twitter.com/logaz" target="_blank">@logaz</a></li>
-          <li>Tumblr: <a href="https://illogaz.tumblr.com/ target="_blank>illogaz.tumblr.com</a></li>
-        </ul>
+      <h3> <a name="contacts">Trovami altrove: </a></h3>
+        <a href="https://twitter.com/logaz?ref_src=twsrc%5Etfw" 
+        class="twitter-follow-button" 
+        data-show-count="false"
+        data-size="large">
+        Follow @logaz</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    
+
     <div class="footer">
       <br>
       <p>Fatto con &#128153; a Milano </p>
