--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
       <hr class="solid">
     </div>
 
-    <div class="intro">    
-      <h1><b>Ciao, sono Emanuele - in arte Logaz</b></h1>
-      <p>Sono un chimico che si occupa di qualità.</p>
+    <div class="intro-head">
+      <table>
+        <tr>
+          <th><img src="https://lh3.googleusercontent.com/pw/ACtC-3flNFz6XOJWYPNah8t12Hv5kKjRTzMTO7I0ZK8ZR8hQU-PxiJowiOY8idjnTNG_WWy4Snog7a2HKobkVieVJqxblfg5-kZA6w7UUIpjP270Vppw4EqmjTkaFKAi54ThgWMoKnx6Qydgc8GYxMWt3zuhOw=s250-no?authuser=0" alt="Me in montagna"></th>
+          <th><h1><b>Ciao &#128075;, sono Emanuele</b></h1>
+            <h1><b>in arte Logaz</b></h1></th>
+        </tr>
+      </table>    
+    </div>  
+    <div class="intro">  
+      
       <p>Mi diletto a scrivere codice, scrivere storie e fare fotografie; presto raccoglierò tutto su questo sito.</p>
       <p>Per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
     <br>
