Cambio font, aggiunta della foto in home e sistemazioni grafiche varie

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>LOGAZ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=IBM+Plex+Mono&family=Roboto&display=swap" 
+    rel="stylesheet"> 
     <link href='./resources/css/style.css' rel='stylesheet'>
   </head>
   <body>
@@ -24,14 +25,13 @@
       <table>
         <tr>
           <th><img src="https://lh3.googleusercontent.com/pw/ACtC-3flNFz6XOJWYPNah8t12Hv5kKjRTzMTO7I0ZK8ZR8hQU-PxiJowiOY8idjnTNG_WWy4Snog7a2HKobkVieVJqxblfg5-kZA6w7UUIpjP270Vppw4EqmjTkaFKAi54ThgWMoKnx6Qydgc8GYxMWt3zuhOw=s250-no?authuser=0" alt="Me in montagna"></th>
-          <th><h1><b>Ciao &#128075;, sono Emanuele</b></h1>
-            <h1><b>in arte Logaz</b></h1></th>
+          <th><h1><b>Ciao &#128075;, sono Emanuele <br>
+          in arte Logaz</b></h1></th>
         </tr>
       </table>    
     </div>  
     <div class="intro">  
-      
-      <p>Mi diletto a scrivere codice, scrivere storie e fare fotografie; presto raccoglierò tutto su questo sito.</p>
+      <p>Mi diletto a scrivere codice, scrivere altre cose e fare fotografie; presto raccoglierò tutto su questo sito.</p>
       <p>Per ora mi trovi <a href="https://illogaz.tumblr.com/" target="_blank">QUI</a></p>
     <br>
     <br>
@@ -39,7 +39,7 @@
     </div>
 
     <div class="contact">
-      <h3> <a name="contacts">Trovami altrove: </a></h3>
+      <h4><a name="contacts">Trovami altrove:</a></h4>
         <a href="https://twitter.com/logaz?ref_src=twsrc%5Etfw" 
         class="twitter-follow-button" 
         data-show-count="false"
@@ -50,7 +50,8 @@
 
     <div class="footer">
       <br>
-      <p>Fatto con &#128153; a Milano </p>
+      <p>Fatto con &#128153; a Milano <br>
+      Qui non si usano Cookies </p>
     </div>
   </body>
 </html>
