--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <title>LOGAZ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=IBM+Plex+Mono&family=Roboto&display=swap" rel="stylesheet"> 
     <link href='./resources/css/style.css' rel='stylesheet'>
   </head>
   <body>
