--- a/ematoma/ematoma.html
+++ b/ematoma/ematoma.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="ponte">
-            <img src="https://lh3.googleusercontent.com/pw/AM-JKLWmL2BDYb5Dcq9368AZT1kZ2OuUIXfpTGqaDV_92V4n8N_eXY6HmIMRCV69iV2HfYe0dREdyfmVtoODG7PnKcLceOn0fibyBn19_jXlIvNVNlh9AP_1AZW6XlJ2SZoiQ0p9lDLj8pbLOeVxTNNVliUw5A=s800-no?authuser=0">
+            <img src="https://lh3.googleusercontent.com/pw/AM-JKLUmEpORSDQTlzyGN9dLz8hTSmgnWcYDpqpnfvcspHfiKIJ5AmM-SxmItHzJ8sCSMiTohXuAPWp9T3D63msL0Krr9CzrbqT5iY1ltvw3paH1znX095Uynj6tau7WIOuDMrowV4k8BtXjeuols758x7h90Q=s800-no?authuser=0>
         </div>
         <br>
         <br>
