--- a/ematoma/ematoma.html
+++ b/ematoma/ematoma.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         <div class="top">
-            <h1>Di tutte le storie d'amore che conosco, la nostra è la mia preferita</h1>
+            <img src="https://64.media.tumblr.com/fd0f6b706134ed8a5d1dc3184f9a74e2/tumblr_mnvzefI2s71srt2mvo1_400.gifv" />
+            <h1>Di tutte le storie d'amore che conosco, la nostra è la mia preferita</h1> 
         </div>
 
         <div class="ponte">
-            <img src="https://lh3.googleusercontent.com/pw/AM-JKLUmEpORSDQTlzyGN9dLz8hTSmgnWcYDpqpnfvcspHfiKIJ5AmM-SxmItHzJ8sCSMiTohXuAPWp9T3D63msL0Krr9CzrbqT5iY1ltvw3paH1znX095Uynj6tau7WIOuDMrowV4k8BtXjeuols758x7h90Q=s800-no?authuser=0>
+            <img src="https://lh3.googleusercontent.com/pw/AM-JKLUmEpORSDQTlzyGN9dLz8hTSmgnWcYDpqpnfvcspHfiKIJ5AmM-SxmItHzJ8sCSMiTohXuAPWp9T3D63msL0Krr9CzrbqT5iY1ltvw3paH1znX095Uynj6tau7WIOuDMrowV4k8BtXjeuols758x7h90Q=s800-no?authuser=0">
         </div>
         <br>
         <br>
