cambio link twitter

--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
 
     <div class="contact">
       <h4><a name="contacts">Trovami altrove:</a></h4>
-        <a href="https://twitter.com/logaz?ref_src=twsrc%5Etfw" 
-        class="twitter-follow-button" 
-        data-show-count="false"
-        data-size="large">
-        Follow @logaz</a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a href="https://twitter.com/logazepam?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @logazepam</a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <div class="footer">
